moving data-camp reporting to this repo

--- a/slackcleaner/vandy-aspire-cleaner.ipynb
+++ b/slackcleaner/vandy-aspire-cleaner.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[slackbot (USLACKBOT) Slackbot, marylvv (UCGG23675) Mary van Valkenburg, oscar.ortega (UCJ27DF0C) Oscar Ortega, iliza.butera (UCL2VN1G8) Iliza Butera, francis.j.prael (UCL34K796) Francis J Prael III, vaibhav.a.janve (UCLA9BZ41) Vaibhav Janve, kim.petrie (UCLDRD1U6) Kim Petrie, arianna.rigon (UCLN2R5RR) Arianna Rigon, ashley.brady (UCLNDHJG2) Ashley Brady, natalie.v.covington (UCLUN8F7C) Natalie V Covington, christopher.t.smith (UCLUP3L3F) Christopher T Smith, megan.e.vogel (UCLUP411B) Megan E Vogel, amanda.m.leung (UCM9QPRK7) Amanda M Leung, alexander.thiemicke (UCME0AM0B) Alexander Thiemicke, hang-jing.wu (UCMJ72JFL) Hang-jing Wu, janani.varadarajan (UCMN3MU2H) Jan Varadarajan, alaina.h.willet (UCN4UDXFG) Alaina Willet, mabel.seto (UCNJNSJFR) Mabel Seto, kimberly.m.stauffer (UM5UGF2RG) Kim Alexander, slavina.b.goleva (UM5UGFW1Y) Slavina B Goleva, eangelo.morales (UM5UKFFKM) Angelo Morales, seth.r.taylor (UM5UKGJG3) Seth R Taylor, nora.j.foegeding (UMB11JMPT) Nora J Foegeding, neha.sawhney.1 (UMGTXJUFN) Neha Sawhney, michael.holloway (UMGTXLKHS) Michael Holloway, daniel.j.blackwell (UMHC6TXNC) Daniel J Blackwell, agnieszka.topolska-wo (UMHC71PBJ) Agnieszka Topolska-Wos, turnee.n.malik (UMHCD7UJH) Turnee Malik, matthew.mead (UMHCD83K7) Matthew Mead, katherine.t.snyder (UMHCD96ER) Kate Snyder, alexandra.j.trevisan (UMK891UCF) Alexandra J Trevisan, yunkai.zhang (UMK8922B1) Yunkai Zhang, ivan.ivanov (UMKHQ6KDL) Ivan Ivanov, armelle.le.guelte (UMKHQ6TPG) Armelle Le Guelte, shristi.shrestha (UMKHQ8614) Shristi Shrestha, angela.zito (UMQR3QH38) Angela Zito]"
+       "[slackbot (USLACKBOT) Slackbot, marylvv (UCGG23675) Mary van Valkenburg, oscar.ortega (UCJ27DF0C) Oscar Ortega, iliza.butera (UCL2VN1G8) Iliza Butera, francis.j.prael (UCL34K796) Francis J Prael III, vaibhav.a.janve (UCLA9BZ41) Vaibhav Janve, kim.petrie (UCLDRD1U6) Kim Petrie, arianna.rigon (UCLN2R5RR) Arianna Rigon, ashley.brady (UCLNDHJG2) Ashley Brady, natalie.v.covington (UCLUN8F7C) Natalie V Covington, christopher.t.smith (UCLUP3L3F) Christopher T Smith, megan.e.vogel (UCLUP411B) Megan E Vogel, amanda.m.leung (UCM9QPRK7) Amanda M Leung, alexander.thiemicke (UCME0AM0B) Alexander Thiemicke, hang-jing.wu (UCMJ72JFL) Hang-jing Wu, janani.varadarajan (UCMN3MU2H) Jan Varadarajan, alaina.h.willet (UCN4UDXFG) Alaina Willet, mabel.seto (UCNJNSJFR) Mabel Seto, kimberly.m.stauffer (UM5UGF2RG) Kim Alexander, slavina.b.goleva (UM5UGFW1Y) Slavina B Goleva, eangelo.morales (UM5UKFFKM) Angelo Morales, seth.r.taylor (UM5UKGJG3) Seth R Taylor, nora.j.foegeding (UMB11JMPT) Nora J Foegeding, neha.sawhney.1 (UMGTXJUFN) Neha Sawhney, michael.holloway (UMGTXLKHS) Michael Holloway, daniel.j.blackwell (UMHC6TXNC) Daniel J Blackwell, agnieszka.topolska-wo (UMHC71PBJ) Agnieszka Topolska-Wos, turnee.n.malik (UMHCD7UJH) Turnee Malik, matthew.mead (UMHCD83K7) Matthew Mead, katherine.t.snyder (UMHCD96ER) Kate Snyder, alexandra.j.trevisan (UMK891UCF) Alexandra J Trevisan, yunkai.zhang (UMK8922B1) Yunkai Zhang, ivan.ivanov (UMKHQ6KDL) Ivan Ivanov, armelle.le.guelte (UMKHQ6TPG) Armelle Le Guelte, shristi.shrestha (UMKHQ8614) Shristi Shrestha, angela.zito (UMQR3QH38) Angela Zito, andrea.rolong (U018JD76CRM) Andrea Rolong, david.c.consoli (U018JD7FLB1) David C Consoli, linh.t.trinh (U018SDKJ34N) Linh T Trinh, sara.ramirez (U018SDKRCLE) Sara Ramirez, verra.m.ngwa (U018XQ4HZ0V) Verra M Ngwa, jaime.l.jensen (U018Z5MVBFC) Jaime L Jensen, alex.munden (U018Z5N10RY) Alex Munden, hiral.master (U018Z5N8K0S) Hiral Master, alissa.d.guarnaccia (U018ZBQ8XM1) Alissa D Guarnaccia, ben.conrad (U0195B4777W) Ben Conrad, cassandra.p.awgulewit (U0195B4ENMS) Cassandra P Awgulewitsch, tamar.kavlashvili (U019BQ1TF3K) Tamar Kavlashvili, jennifer.gribble (U019BQ252LR) Jennifer Gribble, logan.r.richards (U019P0Y5DPS) Logan R Richards, aung.soe.lin (U019P0YC1B2) Aung Soe Lin]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,28 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "..............................................................."
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "conversations.replies: unknown error occurred: thread_not_found\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "...."
+      "................................."
      ]
     }
    ],
